@@ -1,9 +1,9 @@
-# XML::ExistDB
+# XML::eXistDB
 
   * My extended documentation: <http://perl.overmeer.net/CPAN/>
-  * Development via GitHub: <https://github.com/markov2/perl5-XML-ExistDB>
+  * Development via GitHub: <https://github.com/markov2/perl5-XML-eXistDB>
   * Download from CPAN: <ftp://ftp.cpan.org/pub/CPAN/authors/id/M/MA/MARKOV/>
-  * Indexed from CPAN: <https://metacpan.org/release/XML-ExistDB>
+  * Indexed from CPAN: <https://metacpan.org/release/XML-eXistDB>
 
 ## Development &rarr; Release
 
@@ -23,7 +23,7 @@ On github, you can find the processed version for each release.  But the
 better source is CPAN; to get it installed simply run:
 
 ```sh
-   cpan -i XML::ExistDB
+   cpan -i XML::eXistDB
 ```
 
 ## Contributing
